feat: add tag based version number

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 REACT_EDITOR=vim
+# all vars available in the App has to be prefixed with REACT_APP_
+# see https://github.com/facebook/create-react-app/blob/next/packages/react-scripts/template/README.md#what-other-env-files-can-be-used
+REACT_APP_VERSION=${APP_VERSION}
+REACT_APP_ELECTRON=${APP_ELECTRON}
