--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.1",
     "react-final-form": "^3.6.5",
+    "react-inspector": "^2.3.0",
     "react-popper": "^1.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
