--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-client": "^2.3.8",
     "apollo-link-state": "^0.4.1",
     "axios": "^0.18.0",
+    "date-fns": "^2.0.0-alpha.16",
     "final-form": "^4.9.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
