--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "influx-query-admin",
-  "description": "InfuxDB query editor",
+  "name": "influx-explorer",
+  "description": "InfuxDB query editor and administrator UI",
   "author": "Jan Grzegorowski",
-  "version": "0.1.0",
+  "version": "0.2.1",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.2.3",
@@ -61,6 +61,7 @@
   "homepage": ".",
   "build": {
     "appId": "pl.jmarceli.infadmin",
+		"productName": "Influx Explorer",
     "files": [
       "build/**/*",
       "node_modules/**/*"
