feat[InfluxExplorer]: add papaparse for CSV parsing

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql-tag": "^2.9.2",
     "history": "^4.7.2",
     "lodash": "^4.17.10",
+    "papaparse": "^4.6.0",
     "qs": "^6.5.2",
     "react": "^16.4.1",
     "react-apollo": "^2.1.11",
