--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "influx-explorer",
   "description": "InfuxDB query editor and administrator UI",
   "author": "Jan Grzegorowski",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.2.3",
@@ -31,12 +31,12 @@
     "react-scripts": "^1.1.4"
   },
   "scripts": {
-    "start": "APP_VERSION=$(git describe --abbrev=0 --tags) react-scripts start",
-    "build": "APP_VERSION=$(git describe --abbrev=0 --tags) react-scripts build",
+    "start": "./update-env.sh && react-scripts start",
+    "build": "./update-env.sh && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "start:electron": "APP_ELECTRON=true APP_VERSION=$(git describe --abbrev=0 --tags) react-scripts start",
-    "build:electron": "APP_ELECTRON=true APP_VERSION=$(git describe --abbrev=0 --tags) react-scripts build",
+    "start:electron": "./update-env.sh && APP_ELECTRON=true react-scripts start",
+    "build:electron": "./update-env.sh && APP_ELECTRON=true react-scripts build",
     "electron:dev": "ELECTRON_START_URL=http://localhost:3000 electron .",
     "electron": "electron .",
     "electron:stag": "electron-builder -m -c.compression=store -c.extraMetadata.main=build/electron.js",
