--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "history": "^4.7.2",
+    "influx-api": "^0.1.3",
     "lodash": "^4.17.10",
     "material-ui-password-field": "^2.0.1",
     "papaparse": "^4.6.0",
