chore: fix .eslintrc

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,6 @@
 {
   "extends": ["react-app", "airbnb"],
-  "no-underscore-dangle": ["error", { "allow": ["__REDUX_DEVTOOLS_EXTENSION__"] }],
+  "rules": {
+    "no-underscore-dangle": ["error", { "allow": ["__REDUX_DEVTOOLS_EXTENSION__"] }]
+  }
 }
