--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^1.1.0",
     "apollo-cache-inmemory": "^1.2.7",
     "apollo-client": "^2.4.2",
+    "apollo-link": "^1.2.3",
     "apollo-link-state": "^0.4.2",
     "axios": "^0.18.0",
     "date-fns": "^2.0.0-alpha.16",
@@ -46,20 +47,20 @@
     "electron:win": "electron-builder -m -c.extraMetadata.main=build/electron.js"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^10.0.1",
     "benchmark": "^2.1.4",
     "electron": "^2.0.7",
     "electron-builder": "^20.27.1",
     "electron-debug": "^2.0.0",
-    "eslint": "^4.1.1",
+    "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.34.1",
+    "eslint-config-react-app": "^3.0.3",
+    "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.6.0",
-    "eslint-plugin-jest": "^21.18.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-jest": "^21.24.1",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.1.0",
-    "flow-bin": "^0.81.0",
+    "flow-bin": "^0.82.0",
     "flow-typed": "^2.5.1"
   },
   "main": "public/electron.js",
