--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 REACT_EDITOR=vim
 # all vars available in the App has to be prefixed with REACT_APP_
 # see https://github.com/facebook/create-react-app/blob/next/packages/react-scripts/template/README.md#what-other-env-files-can-be-used
-REACT_APP_VERSION=0.3.0
+REACT_APP_VERSION=0.3.1
 REACT_APP_ELECTRON=${APP_ELECTRON}
+
+# use own babel-eslint and eslint versions
+SKIP_PREFLIGHT_CHECK=true
