--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "influx-explorer",
   "description": "InfuxDB query editor and administrator UI",
-  "author": "Jan Grzegorowski",
+  "author": "Jan Grzegorowski <grzegorowski@gmail.com> (https://grzegorowski.com)",
   "version": "0.3.2",
   "private": false,
   "license": "MIT",
@@ -44,11 +44,11 @@
     "build:electron": "./update-env.sh && APP_ELECTRON=true react-scripts build",
     "electron:dev": "ELECTRON_START_URL=http://localhost:3000 electron .",
     "electron": "electron .",
-    "electron:stag": "yarn clean && electron-builder -m -c.compression=store -c.extraMetadata.main=build/electron.js",
+    "electron:stag": "electron-builder -m -c.compression=store -c.extraMetadata.main=build/electron.js",
     "electron:prod": "yarn electron:mac",
-    "electron:mac": "yarn clean && electron-builder -m -c.extraMetadata.main=build/electron.js",
-    "electron:win": "yarn clean && electron-builder -w -c.extraMetadata.main=build/electron.js",
-    "electron:lin": "yarn clean && electron-builder -l -c.extraMetadata.main=build/electron.js"
+    "electron:mac": "electron-builder -m -c.extraMetadata.main=build/electron.js",
+    "electron:win": "electron-builder -w -c.extraMetadata.main=build/electron.js",
+    "electron:linux": "electron-builder -l -c.extraMetadata.main=build/electron.js"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
