--- a/package.json
+++ b/package.json
@@ -39,16 +39,15 @@
     "build": "./update-env.sh && react-scripts build",
     "test": "react-scripts test src --env=jsdom",
     "lint": "yarn eslint src",
-    "start:electron": "./update-env.sh && APP_ELECTRON=true react-scripts start",
-    "build:electron": "./update-env.sh && APP_ELECTRON=true react-scripts build",
     "electron:dev": "ELECTRON_START_URL=http://localhost:3000 electron .",
     "electron": "electron .",
     "electron:stag": "electron-builder -m -c.compression=store -c.extraMetadata.main=build/electron.js",
     "electron:prod": "yarn dist:mac",
     "dist:docker": "yarn build && sh -ac 'source ./.env; docker build . -t jmarceli/influx-explorer:$REACT_APP_VERSION'",
-    "dist:mac": "yarn build:electron && electron-builder -m -c.extraMetadata.main=build/electron.js",
-    "dist:win": "yarn build:electron && electron-builder -w -c.extraMetadata.main=build/electron.js",
-    "dist:linux": "yarn build:electron && electron-builder -l -c.extraMetadata.main=build/electron.js"
+    "dist:mac": "yarn build && electron-builder -m -c.extraMetadata.main=build/electron.js",
+    "dist:win": "yarn build && electron-builder -w -c.extraMetadata.main=build/electron.js",
+    "dist:linux": "yarn build && electron-builder -l -c.extraMetadata.main=build/electron.js",
+    "dist:all": "yarn dist:docker && electron-builder -mwl -c.extraMetadata.main=build/electron.js"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
