--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-react": "^7.1.0",
     "flow-bin": "^0.82.0",
     "flow-typed": "^2.5.1",
+    "react-testing-library": "^5.3.2",
     "rimraf": "^2.6.2"
   },
   "main": "public/electron.js",
