--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "clean": "yarn rimraf dist",
     "start": "./update-env.sh && react-scripts start",
     "build": "./update-env.sh && react-scripts build",
-    "test": "react-scripts test src --env=jsdom",
+    "test": "CI=true react-scripts test",
+    "test:watch": "react-scripts test src",
     "lint": "yarn eslint src",
     "electron:dev": "ELECTRON_START_URL=http://localhost:3000 electron .",
     "electron": "electron .",
