--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ REACT_APP_VERSION=0.1.1
 
 # use own babel-eslint and eslint versions
 SKIP_PREFLIGHT_CHECK=true
+
+# allow for test-utils import without providing full path
+NODE_PATH=utils
