chore: ensure correct TZ in tests

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "start": "./update-env.sh && react-scripts start",
     "build": "./update-env.sh && react-scripts build",
     "db:start": "docker-compose -f dev-db/docker-compose.yml up",
-    "test": "CI=true react-scripts test",
-    "test:watch": "react-scripts test src",
+    "test": "TZ=Europe/Warsaw CI=true react-scripts test",
+    "test:watch": "TZ=Europe/Warsaw react-scripts test src",
     "lint": "yarn eslint src",
     "electron:dev": "ELECTRON_START_URL=http://localhost:3000 electron .",
     "electron": "electron .",
