--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "benchmark": "^2.1.4",
+    "codecov": "^3.1.0",
     "cypress": "^3.1.3",
     "cypress-testing-library": "^2.3.4",
     "electron": "^3.0.3",
