--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-link": "^1.2.3",
     "apollo-link-state": "^0.4.2",
     "axios": "^0.18.0",
+    "compare-versions": "^3.4.0",
     "date-fns": "^2.0.0-alpha.16",
     "final-form": "^4.9.1",
     "graphql": "^14.0.2",
