chore: exclude irrelevant files from coverage report

--- a/package.json
+++ b/package.json
@@ -109,5 +109,13 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!src/index.js",
+      "!src/index.jsx",
+      "!src/registerServiceWorker.js"
+    ]
+  }
 }
