--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs: # a collection of steps
           command: yarn start
           background: true
       - run:
-          command: yarn wait-on http://localhost:3000
+          command: yarn wait-on -d 60000 http://localhost:3000
           # command: yarn wait-on http://localhost:3000 && yarn wait-on http://localhost:8086/ping
       - run:
           command: yarn cypress:run --record --key 88bbc6e8-9210-4eaf-9d61-e3c1a53f2962
