feat: open new version in a new window

--- a/package.json
+++ b/package.json
@@ -6,31 +6,31 @@
   "private": false,
   "license": "MIT",
   "dependencies": {
-    "@material-ui/core": "^3.1.0",
-    "@material-ui/icons": "^3.0.1",
-    "apollo-cache-inmemory": "^1.2.7",
-    "apollo-client": "^2.4.2",
-    "apollo-link": "^1.2.3",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link": "^1.2.11",
     "apollo-link-state": "^0.4.2",
     "axios": "^0.18.0",
     "compare-versions": "^3.4.0",
     "date-fns": "^2.0.0-alpha.16",
-    "final-form": "^4.9.1",
-    "graphql": "^14.0.2",
-    "graphql-tag": "^2.9.2",
-    "history": "^4.7.2",
+    "final-form": "^4.12.0",
+    "graphql": "^14.2.1",
+    "graphql-tag": "^2.10.1",
+    "history": "^4.9.0",
     "influx-api": "^0.1.4",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "material-ui-password-field": "^2.0.1",
-    "papaparse": "^4.6.0",
-    "qs": "^6.5.2",
-    "react": "^16.4.1",
-    "react-apollo": "^2.1.11",
-    "react-dom": "^16.4.1",
-    "react-final-form": "^3.6.5",
-    "react-inspector": "^2.3.0",
-    "react-popper": "^1.0.0",
-    "react-router-dom": "^4.3.1",
+    "papaparse": "^4.6.3",
+    "qs": "^6.7.0",
+    "react": "^16.8.6",
+    "react-apollo": "^2.5.5",
+    "react-dom": "^16.8.6",
+    "react-final-form": "^4.1.0",
+    "react-inspector": "^3.0.2",
+    "react-popper": "^1.3.3",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "^2.0.4"
   },
   "scripts": {
@@ -41,8 +41,8 @@
     "test": "TZ=Europe/Warsaw CI=true react-scripts test",
     "test:watch": "TZ=Europe/Warsaw react-scripts test src",
     "lint": "yarn eslint src",
-    "electron:dev": "ELECTRON_START_URL=http://localhost:3000 electron .",
-    "electron": "electron .",
+    "electron:dev": "ELECTRON_IS_DEV=1 ELECTRON_START_URL=http://localhost:3000 electron .",
+    "electron": "ELECTRON_IS_DEV=1 electron .",
     "electron:stag": "electron-builder -m -c.compression=store -c.extraMetadata.main=build/electron.js",
     "electron:prod": "yarn dist:mac",
     "dist:docker": "yarn build && sh -ac 'source ./.env; docker build . -t timeseriesadmin/timeseriesadmin:$REACT_APP_VERSION'",
@@ -57,29 +57,30 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "benchmark": "^2.1.4",
-    "codecov": "^3.1.0",
-    "cypress": "^3.1.3",
-    "cypress-testing-library": "^2.3.4",
-    "electron": "^3.0.3",
-    "electron-builder": "^20.27.1",
-    "electron-debug": "^2.0.0",
-    "eslint": "^5.6.1",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-react-app": "^3.0.3",
-    "eslint-plugin-cypress": "^2.1.3",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-import": "^2.6.0",
-    "eslint-plugin-jest": "^21.24.1",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.1.0",
-    "flow-bin": "^0.82.0",
+    "codecov": "^3.3.0",
+    "cypress": "^3.2.0",
+    "cypress-testing-library": "^3.0.1",
+    "electron": "^6.0.7",
+    "electron-builder": "^21.2.0",
+    "electron-debug": "^3.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-react-app": "^4.0.0",
+    "eslint-plugin-cypress": "^2.2.1",
+    "eslint-plugin-flowtype": "^3.7.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jest": "^22.5.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
+    "flow-bin": "^0.98.0",
     "flow-typed": "^2.5.1",
-    "react-testing-library": "^5.3.2",
-    "rimraf": "^2.6.2",
+    "react-testing-library": "^7.0.0",
+    "rimraf": "^2.6.3",
     "wait-on": "^3.2.0"
   },
   "main": "public/electron.js",
-  "homepage": "https://timeseriesadmin.github.io/",
+  "_homepage": "homepage value should not be changed or Electron will not be able to localize source files",
+  "homepage": ".",
   "build": {
     "appId": "com.grzegorowski.timeseriesadmin",
     "productName": "Time Series Admin",
