--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "babel-polyfill": "^6.26.0",
     "benchmark": "^2.1.4",
     "codecov": "^3.3.0",
     "cypress": "^3.2.0",
@@ -73,7 +74,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "flow-bin": "^0.98.0",
-    "flow-typed": "^2.5.1",
+    "flow-typed": "^2.6.2",
     "react-testing-library": "^7.0.0",
     "rimraf": "^2.6.3",
     "wait-on": "^3.2.0"
