--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@types/node": "^12.12.12",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
-    "apollo-cache-inmemory": "^1.5.1",
-    "apollo-client": "^2.5.1",
-    "apollo-link": "^1.2.11",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.13",
     "axios": "^0.18.0",
     "compare-versions": "^3.4.0",
     "date-fns": "^2.0.0-alpha.16",
@@ -28,7 +28,7 @@
     "papaparse": "^4.6.3",
     "qs": "^6.7.0",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.5",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.8.6",
     "react-final-form": "^4.1.0",
     "react-inspector": "^3.0.2",
@@ -59,6 +59,7 @@
     "cypress:open": "cypress open"
   },
   "devDependencies": {
+    "@apollo/react-testing": "^3.1.3",
     "@types/classnames": "^2.2.9",
     "@types/lodash": "^4.14.149",
     "@types/papaparse": "^5.0.2",
