--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "influx-api": "^0.1.4",
     "lodash": "^4.17.11",
     "material-ui-password-field": "^2.1.0",
+    "mui-datatables": "^2.13.1",
     "papaparse": "^4.6.3",
     "qs": "^6.7.0",
     "react": "^16.8.6",
@@ -63,6 +64,7 @@
     "@testing-library/react": "^9.3.2",
     "@types/classnames": "^2.2.9",
     "@types/lodash": "^4.14.149",
+    "@types/mui-datatables": "^2.12.2",
     "@types/papaparse": "^5.0.2",
     "@types/react-inspector": "^3.0.0",
     "@types/webpack-env": "^1.14.1",
