--- a/dev-db/docker-compose.yml
+++ b/dev-db/docker-compose.yml
@@ -7,8 +7,17 @@ services:
       - '8086:8086'
     volumes:
       - ./influx:/var/lib/influxdb
+      # comment out to use without SSL
+      - ./cert:/cert
     environment:
       - INFLUXDB_DB=test
       - INFLUXDB_HTTP_AUTH_ENABLED=true
       - INFLUXDB_ADMIN_USER=admin
       - INFLUXDB_ADMIN_PASSWORD=password
+      # comment out to use without SSL
+      - INFLUXDB_HTTP_HTTPS_ENABLED=true
+      - INFLUXDB_HTTP_HTTPS_CERTIFICATE=/cert/certificate.pem
+      - INFLUXDB_HTTP_HTTPS_PRIVATE_KEY=/cert/key.pem
+
+# In order to simulate unsafe SSL add the following like to your /etc/hosts file and access database from test.dev URL
+# 127.0.0.1 test.dev
