--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-inspector": "^4.0.0",
     "react-popper": "^1.3.3",
     "react-scripts": "^3.2.0",
+    "react-use": "^13.10.0",
     "typescript": "^3.7.2"
   },
   "scripts": {
