--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "build": "./update-env.sh && react-scripts build",
     "db:start": "docker-compose -f dev-db/docker-compose.yml up",
     "test": "TZ=Europe/Warsaw react-scripts test src --bail --runInBand",
-    "lint": "yarn eslint src",
+    "lint": "eslint './src/**/*.{ts,tsx,js,jsx}'",
     "electron:dev": "ELECTRON_IS_DEV=1 ELECTRON_START_URL=http://localhost:3000 electron .",
     "electron": "ELECTRON_IS_DEV=1 electron .",
     "electron:stag": "electron-builder -m -c.compression=store -c.extraMetadata.main=build/electron.js",
@@ -68,9 +68,10 @@
   "devDependencies": {
     "@apollo/react-testing": "^3.1.3",
     "@testing-library/react": "^9.3.2",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
     "babel-eslint": "^10.0.1",
     "babel-polyfill": "^6.26.0",
-    "benchmark": "^2.1.4",
     "codecov": "^3.3.0",
     "cypress": "^3.2.0",
     "cypress-testing-library": "^3.0.1",
@@ -79,13 +80,18 @@
     "electron-debug": "^3.0.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-react": "^1.1.7",
     "eslint-config-react-app": "^4.0.0",
     "eslint-plugin-cypress": "^2.2.1",
-    "eslint-plugin-flowtype": "^3.7.0",
+    "eslint-plugin-flowtype": "^4.5.2",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jest": "^22.5.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "prettier": "^1.19.1",
     "rimraf": "^2.6.3",
     "wait-on": "^3.2.0"
   },
