--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "cypress:run": "cypress run --browser chrome",
     "cypress:open": "cypress open",
     "ci:test": "TZ=Europe/Warsaw CI=true react-scripts test --coverage --runInBand --bail  && codecov -t 1034d70c-6870-4421-986f-6ac405850292",
-    "ci:cypress": "yarn cypress:run --browser chrome --record --key 88bbc6e8-9210-4eaf-9d61-e3c1a53f2962"
+    "ci:cypress": "yarn cypress:run --browser chrome --record"
   },
   "devDependencies": {
     "@apollo/react-testing": "3.1.3",
