--- a/package.json
+++ b/package.json
@@ -79,18 +79,7 @@
     "electron-builder": "21.2.0",
     "electron-debug": "3.0.1",
     "eslint": "6.7.2",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-config-prettier": "6.7.0",
-    "eslint-config-react": "1.1.7",
-    "eslint-config-react-app": "5.0.2",
-    "eslint-plugin-cypress": "2.7.0",
-    "eslint-plugin-flowtype": "4.5.2",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jest": "23.1.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-prettier": "3.1.1",
-    "eslint-plugin-react": "7.17.0",
-    "eslint-plugin-react-hooks": "2.3.0",
+    "eslint-plugin-react": "^7.17.0",
     "prettier": "1.19.1",
     "rimraf": "3.0.0",
     "wait-on": "3.3.0"
