--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "devDependencies": {
     "@apollo/react-testing": "3.1.3",
+    "@testing-library/cypress": "^5.0.2",
     "@testing-library/react": "9.3.2",
     "@typescript-eslint/eslint-plugin": "2.10.0",
     "@typescript-eslint/parser": "2.10.0",
@@ -74,7 +75,6 @@
     "babel-polyfill": "6.26.0",
     "codecov": "3.6.1",
     "cypress": "3.7.0",
-    "cypress-testing-library": "3.0.1",
     "electron": "7.1.3",
     "electron-builder": "21.2.0",
     "electron-debug": "3.0.1",
