--- a/package.json
+++ b/package.json
@@ -6,42 +6,42 @@
   "private": false,
   "license": "MIT",
   "dependencies": {
-    "@material-ui/core": "^4.7.1",
-    "@material-ui/icons": "^4.5.1",
-    "@types/classnames": "^2.2.9",
-    "@types/jest": "^24.0.23",
-    "@types/lodash": "^4.14.149",
-    "@types/mui-datatables": "^2.13.0",
-    "@types/node": "^12.12.14",
-    "@types/papaparse": "^5.0.2",
-    "@types/react": "^16.9.14",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-inspector": "^3.0.0",
-    "@types/webpack-env": "^1.14.1",
-    "apollo-cache-inmemory": "^1.6.3",
-    "apollo-client": "^2.6.4",
-    "apollo-link": "^1.2.13",
-    "axios": "^0.19.0",
-    "compare-versions": "^3.4.0",
-    "date-fns": "^2.0.0-alpha.16",
-    "final-form": "^4.18.6",
-    "graphql": "^14.5.8",
-    "graphql-tag": "^2.10.1",
-    "history": "^4.9.0",
-    "influx-api": "^0.1.4",
-    "lodash": "^4.17.11",
-    "mui-datatables": "^2.13.1",
-    "papaparse": "^5.0.0",
-    "qs": "^6.7.0",
-    "react": "^16.12.0",
-    "react-apollo": "^3.1.3",
-    "react-dom": "^16.12.0",
-    "react-final-form": "^6.3.3",
-    "react-inspector": "^4.0.0",
-    "react-popper": "^1.3.3",
-    "react-scripts": "^3.2.0",
-    "react-use": "^13.10.0",
-    "typescript": "^3.7.2"
+    "@material-ui/core": "4.7.1",
+    "@material-ui/icons": "4.5.1",
+    "@types/classnames": "2.2.9",
+    "@types/jest": "24.0.23",
+    "@types/lodash": "4.14.149",
+    "@types/mui-datatables": "2.13.0",
+    "@types/node": "12.12.14",
+    "@types/papaparse": "5.0.2",
+    "@types/react": "16.9.15",
+    "@types/react-dom": "16.9.4",
+    "@types/react-inspector": "3.0.0",
+    "@types/webpack-env": "1.14.1",
+    "apollo-cache-inmemory": "1.6.3",
+    "apollo-client": "2.6.4",
+    "apollo-link": "1.2.13",
+    "axios": "0.19.0",
+    "compare-versions": "3.5.1",
+    "date-fns": "2.8.1",
+    "final-form": "4.18.6",
+    "graphql": "14.5.8",
+    "graphql-tag": "2.10.1",
+    "history": "4.10.1",
+    "influx-api": "0.1.4",
+    "lodash": "4.17.15",
+    "mui-datatables": "2.13.2",
+    "papaparse": "5.1.0",
+    "qs": "6.9.1",
+    "react": "16.12.0",
+    "react-apollo": "3.1.3",
+    "react-dom": "16.12.0",
+    "react-final-form": "6.3.3",
+    "react-inspector": "4.0.0",
+    "react-popper": "1.3.6",
+    "react-scripts": "3.3.0",
+    "react-use": "13.10.2",
+    "typescript": "3.7.3"
   },
   "scripts": {
     "clean": "yarn rimraf dist",
@@ -67,7 +67,7 @@
   },
   "devDependencies": {
     "@apollo/react-testing": "3.1.3",
-    "@testing-library/cypress": "^5.0.2",
+    "@testing-library/cypress": "5.0.2",
     "@testing-library/react": "9.3.2",
     "@typescript-eslint/eslint-plugin": "2.10.0",
     "@typescript-eslint/parser": "2.10.0",
@@ -79,7 +79,7 @@
     "electron-builder": "21.2.0",
     "electron-debug": "3.0.1",
     "eslint": "6.7.2",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react": "7.17.0",
     "prettier": "1.19.1",
     "rimraf": "3.0.0",
     "wait-on": "3.3.0"
