Update renovate.json (#58)
* Update renovate.json

* Update renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,9 @@
   },
   "baseBranches": ["develop"],
   "automerge": true,
+  "minor": {
+    "automerge": true,
+  },
   "major": {
     "automerge": false
   }
