--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,9 @@
   },
   "baseBranches": ["develop"],
   "automerge": true,
+  "mino": {
+    "automerge": true
+  },
   "major": {
     "automerge": false
   }
